# ESCHER-Swarm-Solver

./: .gitattributes  .gitignore  README.md
2025_11_15_16_00_36/: metadata.pt  policy.pt  regret_player0.pt  regret_player1.pt  value.pt
ESCHER-Torch/: README.md  __init__.py  interactive_value_heatmap.py  run_escher_torch_digging.py  run_escher_torch_leduc.py  run_escher_torch_swarm.py  run_escher_torch_swarm_2.py  run_swarm_large_inference.py  run_swarm_large_regret_matching.py
Swarm-AD-Large-OpenSpiel/: README.md  __init__.py  blueprint_midpoints.py  demo_animation.py  demo_visualizer.py  large_game_constants.py  pathfinding.py  policy_transfer.py  render_snapshot_animation.py  swarm_defense_large_game.py
Swarm-AD-Large-OpenSpiel-2/: README.md  __init__.py  demo_animation.py  demo_rollout.py  demo_visualizer.py  pathfinding.py  policy_transfer.py  swarm_defense_large_game.py
Swarm-AD-Naive-Strategy/: README.md  blueprint_strategy.py  run_blueprint_demo.py
Swarm-AD-OpenSpiel-2/: README.md  (+3 more)
Visualizer/: README.md  cot_history.xml  pyproject.toml  swarm_large_snapshot.json  test_swarm_snapshot.json
Visualizer/scripts/: loopback_wintak_tcp_test.py  loopback_wintak_test.py  push_test_cot.py  stream_visualized_policy.py
Visualizer/src/swarm_visualizer/: README.md  __init__.py  cli.py  config.py  cot.py  entities.py  history.py  pytak_client.py  scenario.py  simulator.py
Visualizer/src/swarm_visualizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Visualizer/tests/: test_config.py  test_push_test_cot.py  test_scenario.py
(+41 files in other folders)
