[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-visualizer"
version = "0.1.0"
description = "Swarm attack OpenSpiel scenario visualizer with PyTak output for WinTAK"
readme = "README.md"
authors = [
  { name = "ESCHER-Swarm-Solver Team" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "pytak>=5.2",
  "pydantic>=2.8",
  "rich>=13.7",
  "cryptography>=46.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23"
]

[project.scripts]
swarm-visualizer = "swarm_visualizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
